@@ -59,7 +59,7 @@
 // ============================================================================================================================
 
 //???
-#define CONFIG_FILE Config_01.c
+#define CONFIG_FILE Config_15.c
 
 
 // ============================================================================================================================
@@ -74,5 +74,5 @@
 // ============================================================================================================================
 
 //???
-#include <SD.h>
-//#include <EthernetNodo.h>
+// #include <SD.h>
+// #include <EthernetNodo.h>
